src/test/deca/context/valid/decl_init_int.deca


//Contextuel declaration variable : int x = expr ;
//attendu : OK

{
    int x = 5 ;
}