src/test/deca/context/invalid/assign_undeclared.deca

//COntextuel : varialble doit être déclaré avant usage
// Attendu : erreur "x non déclaré"

{
    x = 5;
}